fixed project name spacing

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -400,7 +400,7 @@ body {
 .Project-header {
   background-color: rgb(210, 179, 184);
   position: relative;
-  font-size: 3vw;
+  font-size: 2.5vw;
 }
 
 .Projects h1 {
@@ -462,6 +462,7 @@ body {
 
 .Project-name {
   transform: translateY(50%);
+  font-size: 2.8vw;
 }
 
 .Project:hover .Project-name {
